--- a/core/app/views/Products/_basicInfo.html
+++ b/core/app/views/Products/_basicInfo.html
@@ -142,7 +142,7 @@
   <td>State(运营)</td>
   <td style="color:${pro.state?.fontcolor()}">${pro.state}</td>
   <td><span style="color:red">*</span>Part Number</td>
-  <td><input type="text" name="pro.partNumber" value="${pro.partNumber}" required></td>
+  <td><input type="text" name="pro.partNumber" id="partNumber" value="${pro.partNumber}" required></td>
 </tr>
 
 <tr>
@@ -152,7 +152,7 @@
     <input type="text" style="width:95%" id="proabbreviation" name="pro.abbreviation" value="${pro.abbreviation}">
   </td>
   <th><span style="color:red">*</span>UPC</th>
-  <td><input type="text" name="pro.upc" value="${pro.upc}"></td>
+  <td><input type="text" name="pro.upc" id="upc" value="${pro.upc}" required></td>
 </tr>
 
 <tr>
