--- a/core/app/views/Products/blank.html
+++ b/core/app/views/Products/blank.html
@@ -167,7 +167,7 @@
             <input type="date" name="pro.delistingTime" value="${pro.delistingTime}">
           </td>
 
-          <th><span style="color:red">*</span>UPC</th>
+          <th>UPC</th>
           <td><input type="text" name="pro.upc" value="${pro.upc}" required></td>
         </tr>
 
@@ -177,7 +177,7 @@
             <input type="text" style="width:95%" id="pro_abbreviation" name="pro.abbreviation" value="${pro.abbreviation}"
                    required="required">
           </td>
-          <th style=""><span style="color:red">*</span>Part Number</th>
+          <th>Part Number</th>
           <td><input type="text" name="pro.partNumber" value="${pro.partNumber}" required></td>
         </tr>
 
