--- a/core/app/views/Products/saleAmazon.html
+++ b/core/app/views/Products/saleAmazon.html
@@ -4,6 +4,8 @@
     #{stylesheet 'market.css'/}
 #{/set}
 #{set 'moreScripts'}
+    #{script 'editor/kindeditor-min.js'/}
+    #{script 'editor/lang/zh_CN.js'/}
     #{script 'component/amazon.coffee'/}
     #{script 'products/saleAmazon.coffee'/}
 #{/set}
