--- a/core/app/views/Sellings/createSelling.html
+++ b/core/app/views/Sellings/createSelling.html
@@ -28,7 +28,7 @@
 
     <div class="span10" style="text-align:right;">
       <a href="@{Sellings.index()}" data-dismiss='modal' class="btn">返回</a>
-      <a href="#" id="submitSaleBtn" class="btn btn-primary">AMZ上架</a>
+      <a href="#" id="submitSaleBtn" class="btn btn-primary" style="display:none;">AMZ上架</a>
     </div>
   </form>
 </div>
@@ -44,7 +44,7 @@
       <h4 class="text-center">手动添加 Selling</h4>
 
     #{text_field id: 'addSellingSku', name: 'sku', label: 'SKU', readonly: true/}
-    #{text_field id: 'upc', name: 'upc', label: 'UPC', placeholder: "Universal Product Code" /}
+    #{text_field id: 'upc', name: 'upc', label: 'UPC', placeholder: "Universal Product Code", readonly: true/}
     #{text_field id: 'asin', name: 'asin', label: 'ASIN', placeholder: "Amazon Standard Identification Number" /}
     #{select_field id:'market', name: 'market', items: models.market.M.values(), label: 'Market' /}
     #{select_field id:'acc.id', name: 'acc.id', items: models.market.Account.openedSaleAcc(), label: 'Account' /}
