--- a/core/app/views/AmazonOperations/index.html
+++ b/core/app/views/AmazonOperations/index.html
@@ -16,6 +16,7 @@
                     <option value="aus">US</option>
                     <option value="ait">IT</option>
                     <option value="ajp">JP</option>
+                    <option value="ajp">CA</option>
                 </select>
                 <select name="orderby" style="width:80px;">
                     <option value="rating">Rating</option>
