--- a/core/app/views/Sellings/_saleAmazon.html
+++ b/core/app/views/Sellings/_saleAmazon.html
@@ -1,7 +1,7 @@
 <div class="row-fluid">
 #{form @Products.saleAmazonListing(), class: 'form-horizontal', id: 'saleAmazonForm'}
   <div class="span5">
-      #{text_field id:'msku', name: 's.merchantSKU', readonly: true, label: 'Merchant SKU', value: product.sku/}
+      #{text_field id:'msku', name: 's.merchantSKU', readonly: true, label: 'Merchant SKU', value: product.sku+","+product.upc/}
       #{text_field id:'upc', name: 's.aps.upc', label: 'UPC', value: product.upc, readonly: true /}
       #{text_field id:'manufacturer', name: 's.aps.manufacturer', label: 'Manufacturer', value: 'EasyAcc' /}
       #{text_field id:'brand', name: 's.aps.brand', label: '品牌', value: 'EasyAcc'/}
