--- a/core/app/views/ShipmentReports/lossRateReport.html
+++ b/core/app/views/ShipmentReports/lossRateReport.html
@@ -153,7 +153,7 @@
             <td>${loss.sku}</td>
             <td>${loss.qty}</td>
             <td>${loss.lossqty}</td>
-            <td>${loss.c}</td>
+            <td>${loss.compentype}</td>
             <td>${loss.compenusdamt}</td>
             <td>${loss.totallossprice}</td>
             <td>${loss.totalShipmentprice}</td>
