添加UPC和PartNumber日本输入框

--- a/core/app/views/Products/_basicInfo.html
+++ b/core/app/views/Products/_basicInfo.html
@@ -139,20 +139,28 @@
 </tr>
 
 <tr>
-  <td>State(运营)</td>
-  <td style="color:${pro.state?.fontcolor()}">${pro.state}</td>
-  <td><span style="color:red">*</span>Part Number</td>
-  <td><input type="text" name="pro.partNumber" id="partNumber" value="${pro.partNumber}" required></td>
-</tr>
-
-<tr>
   <th>产品名称</th>
   <td colspan="1">
     <input type="hidden" style="width:95%" name="pro.iscopy" value="${pro.iscopy}">
     <input type="text" style="width:95%" id="proabbreviation" name="pro.abbreviation" value="${pro.abbreviation}">
   </td>
+  <th>State(运营)</th>
+  <td style="color:${pro.state?.fontcolor()}">${pro.state}</td>
+
+</tr>
+
+<tr>
   <th><span style="color:red">*</span>UPC</th>
   <td><input type="text" name="pro.upc" id="upc" value="${pro.upc}" required></td>
+  <th>UPC(JP)</th>
+  <td><input type="text" name="pro.upcJP" id="upc" value="${pro.upcJP}"></td>
+</tr>
+
+<tr>
+  <th><span style="color:red">*</span>Part Number</th>
+  <td><input type="text" name="pro.partNumber" id="partNumber" value="${pro.partNumber}" required></td>
+  <th>Part Number(JP)</th>
+  <td><input type="text" name="pro.partNumberJP" id="upc" value="${pro.partNumberJP}"></td>
 </tr>
 
 <tr>
