--- a/core/app/views/Sellings/blank.html
+++ b/core/app/views/Sellings/blank.html
@@ -23,6 +23,8 @@
         <a class="btn" id="create_selling_btn">提交</a>
       </div>
     </div>
-
   </form>
+
+  <input type="hidden" id="upc_jp"/>
+  <input type="hidden" id="upc_init"/>
 </div>
