--- a/core/app/views/Shipments/_expresseurope.html
+++ b/core/app/views/Shipments/_expresseurope.html
@@ -1,7 +1,8 @@
 <tr>
   <td style="font-family:STXihei" colspan="3" rowspan="4" class="td1">
   #{if country == 'DE' }
-    Buyer : TUGGLE ELECTRONIC COMMERCE CO.,LTD <br>
+    Sold to : Yeping Xie C/O TUGGLE ELECTRONIC COMMERCE CO.,LTD <br>
+    Address:Rosenstrasse 5,24768 Rendsburg,Germany<br>
     VAT No. : DE 292695920<br>
   #{/if}
   #{elseif country == 'FR'}
@@ -10,11 +11,13 @@
     VAT No. : FR63328387212<br>
   #{/elseif}
   #{elseif country == 'GB'}
-    Buyer : Edeer Network Technology CO., LTD<br>
+    Sold to : Edeer Network Technology CO., LTD<br>
+    Address:53A Woodgrange Road London E7 0EL United Kingdom<br>
     VAT No. : GB117317336<br>
   #{/elseif}
   #{elseif country == 'IT'}
-    Buyer : ACIT S.R.L<br>
+    Sold to : ACIT S.R.L<br>
+    Address: Via Scarlatti 30,20124 Milano(MI),ITALY<br>
     VAT No. : IT07289420965<br>
   #{/elseif}
   #{else}
@@ -37,7 +40,9 @@
   #{/if}
     <br>
     Email: Jason@easyacceu.com <br>
-    Add: ${address}
+    Ship to: ${address}
+    Contact Person: Julia
+    Tel: +8613973261762
   </td>
   <td>Buyer EORI NO.：</td>
 #{if country == 'DE' }
