修改运输发票

--- a/core/app/views/Shipments/_expresseurope.html
+++ b/core/app/views/Shipments/_expresseurope.html
@@ -40,8 +40,8 @@
   #{/if}
     <br>
     Email: Jason@easyacceu.com <br>
-    Ship to: ${address}
-    Contact Person: Julia
+    Ship to: ${address} <br>
+    Contact Person: Julia<br>
     Tel: +8613973261762
   </td>
   <td>Buyer EORI NO.：</td>
