--- a/core/app/views/Products/_basicInfo.html
+++ b/core/app/views/Products/_basicInfo.html
@@ -101,6 +101,13 @@
   </td>
 </tr>
 
+<tr>
+  <th>用途(运输)</th>
+  <td><input type="text" name="pro.useWay" value="${pro.useWay}"/></td>
+  <th>中文品名(运输)</th>
+  <td><input type="text" name="pro.chineseName" value="${pro.chineseName}"/></td>
+</tr>
+
 
 <tr>
   <th>上市时间</th>
