--- a/core/app/views/ShipmentReports/cost.html
+++ b/core/app/views/ShipmentReports/cost.html
@@ -40,6 +40,21 @@
        data-url="@{ShipmentReports.countShipWeightByMarket()}"></div>
 </div>
 
+#{success_row}
+<ul>
+  <li>物流重量与费用统计</li>
+</ul>
+#{/success_row}
+<div class="row-fluid">
+  <div class="span6" style="height:450px;width:47%;overflow-y:auto;" id="costReportDiv">
+
+  </div>
+  <div class="span6" style="height:450px;width:47%;overflow-y:auto;">
+    <table></table>
+
+  </div>
+</div>
+
 <ul>
   <li>导出单个 SKU 的运输重量报表</li>
 </ul>
