--- a/core/app/views/Shipments/_show_progress.html
+++ b/core/app/views/Shipments/_show_progress.html
@@ -234,6 +234,9 @@
     <a href="@{Shipments.invoice(ship.id)}" class="btn btn-success" target="_blank">
       运输单发票 <i class="icon-download-alt"></i>
     </a>
+    <a href="@{Excels.declare(ship.id)}" class="btn btn-success" target="_blank">
+      报关要素下载 <i class="icon-download-alt"></i>
+    </a>
   #{/if}
   </div>
 </div>
