--- a/core/app/views/CheckTasks/_showTask.html
+++ b/core/app/views/CheckTasks/_showTask.html
@@ -67,6 +67,12 @@
   </td>
 </tr>
 <tr>
+  <th>质检取样</th>
+  <td colspan="3"><input type="text" name="check.qcSample" value="${check.qcSample}"/></td>
+  <th>采购取样</th>
+  <td colspan="7"><input type="text" value="${check.units?.purchaseSample}" readonly/></td>
+</tr>
+<tr>
   <th>是否合格</th>
   <td colspan="3">
   #{select_enum name: 'check.result', items: models.qc.CheckTask.ResultType.values(), value: check.result/}
