--- a/core/app/views/ShipmentReports/cost.html
+++ b/core/app/views/ShipmentReports/cost.html
@@ -54,10 +54,13 @@
 
   </div>
 </div>
+<br/>
 
+#{success_row}
 <ul>
   <li>导出单个 SKU 的运输重量报表</li>
 </ul>
+#{/success_row}
 <div class="row-fluid pull-right">
   <div class="span12 bs-docs-form">
     <form class="search_form" action="@{Excels.exportShipmentWeighReport()}" target="_blank">
