--- a/core/app/views/ShipmentReports/costVATReport.html
+++ b/core/app/views/ShipmentReports/costVATReport.html
@@ -1,6 +1,6 @@
 <table class="table table-condensed table-bordered">
   <tr>
-    <th colspan="10" style="text-align:center">运费与重量${month}月报表</th>
+    <th colspan="10" style="text-align:center">税金与重量${month}月报表</th>
   </tr>
   <tr>
     <th rowspan="2" style="vertical-align:middle;">市场</th>
@@ -9,15 +9,15 @@
     <th colspan="3" style="text-align:center">快递</th>
   </tr>
   <tr>
-    <th style="text-align:center">运费<br/>(USD)</th>
+    <th style="text-align:center">关税+VAT<br/>(USD)</th>
     <th style="text-align:center">重量<br/>(KG)</th>
-    <th style="text-align:center">单位运费<br/>(USD/KG)</th>
-    <th style="text-align:center">运费<br/>(USD)</th>
+    <th style="text-align:center">单位<br/>(关税+VAT)</th>
+    <th style="text-align:center">关税+VAT<br/>(USD)</th>
     <th style="text-align:center">重量<br/>(KG)</th>
-    <th style="text-align:center">单位运费<br/>(USD/KG)</th>
-    <th style="text-align:center">运费<br/>(USD)</th>
+    <th style="text-align:center">单位运费<br/>(关税+VAT)</th>
+    <th style="text-align:center">关税+VAT<br/>(USD)</th>
     <th style="text-align:center">重量<br/>(KG)</th>
-    <th style="text-align:center">单位运费<br/>(USD/KG)</th>
+    <th style="text-align:center">单位运费<br/>(关税+VAT)</th>
   </tr>
   #{list items:dtos, as:'dto'}
   <tr>
