--- a/core/app/views/ShipmentReports/cost.html
+++ b/core/app/views/ShipmentReports/cost.html
@@ -7,10 +7,14 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <span>日期选择:</span>
-  #{select_year class:'span1', id:'select_year'/}
-  #{select_month class:'span1', id:'select_month'/}
-    <input type="button" class="btn" value="Search" id="count_btn">
+    <div class="input-prepend inline">
+      <span class="add-on">运输时间From:</span>
+      <input type="date" style="width:90px;" id="select_from" value="${from}">
+
+      <span class="add-on" style="margin-left:20px;">To:</span>
+      <input type="date" style="width:90px;" id="select_to" value="${to}">&nbsp;
+      <input type="button" class="btn" value="Search" id="count_btn">
+    </div>
   </div>
 </div>
 <br/>
@@ -45,14 +49,8 @@
   <li>物流重量与费用统计</li>
 </ul>
 #{/success_row}
-<div class="row-fluid">
-  <div class="span6" style="height:450px;width:47%;overflow-y:auto;" id="costReportDiv">
+<div class="row-fluid" id="costReportDiv" style="height:500px;">
 
-  </div>
-  <div class="span6" style="height:450px;width:47%;overflow-y:auto;">
-    <table></table>
-
-  </div>
 </div>
 <br/>
 
