--- a/core/app/views/FBAs/packingSlip.html
+++ b/core/app/views/FBAs/packingSlip.html
@@ -54,7 +54,8 @@
   <tr>
     <td align="center" colspan="3">
       <!-- 需要生成的 Bar Code -->
-      <img src="http://e.easya.cc@{Login.code128(shipmentId)}" width="260" height="72" border="0"
+      <img src="${models.OperatorConfig.getVal("elcuk2url")}@{Login.code128(shipmentId)}" width="260"
+           height="72" border="0"
            style="padding-left:30px">
     </td>
   </tr>
