--- a/core/app/views/Shipments/_show_items.html
+++ b/core/app/views/Shipments/_show_items.html
@@ -81,7 +81,7 @@
               <select name="compentype" id="compentype" class="inline" style="width:110px;">
                 <option value="" selected="selected">选择</option>
                 <option value="amazon">Amazon</option>
-                <option value="easyacc">Easyacc</option>
+                <option value="${models.OperatorConfig.getVal("addressname")}">"${models.OperatorConfig.getVal("addressname")}"</option>
                 <option value="other">Other</option>
               </select>
               <span class="add-on" style="margin-left:100px;">丢失量</span>
