--- a/core/app/views/Activitis/_process.html
+++ b/core/app/views/Activitis/_process.html
@@ -1,7 +1,7 @@
 <!-- 非销售账号, IT -->
 <table class="table table-bordered table-striped account_list">
   <tr>
-    <img src="http://e.easya.cc@{Activitis.processimage(pdId,piId)}">
+    <img src="${models.OperatorConfig.getVal("elcuk2url")}@{Activitis.processimage(pdId,piId)}">
   </tr>
   <div class="row-fluid">
     <table class="table table-bordered table-condensed">
