--- a/core/app/views/Shipments/invoice.html
+++ b/core/app/views/Shipments/invoice.html
@@ -59,7 +59,8 @@
   <tr>
     <td colspan="5" class="td1">
       <div class="div1">
-        <img src="http://e.easya.cc/images/common/LANTO.png" style="height:100%">
+        <img src="${models.OperatorConfig.getVal("elcuk2url")}/images/common/LANTO.png"
+             style="height:100%">
       </div>
     </td>
   </tr>
@@ -126,10 +127,10 @@
   <tr>
     <td colspan="5">
       <div class="div2">
-        <p>LANTO Electronic Commerce Co., Ltd</p>
+        <p>${models.OperatorConfig.getVal("companyname")} Electronic Commerce Co., Ltd</p>
 
         <p>SIGNATURE</p>
-        <img src="http://e.easya.cc/images/common/signature.png">
+        <img src="${models.OperatorConfig.getVal("elcuk2url")}/images/common/signature.png">
       </div>
     </td>
   </tr>
